# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
migrations/: 20230627225429_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
